--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,18 +1,132 @@
-
-
-#imagenes{
+#imagenlogo{
 
     object-fit: contain;
-    width: 120px;
-    height: 120px;
+    width: 50px;
+    height: 50px;
     margin-top: 10px;
     border-radius: 100%;
     border: 3px solid #fff1f1;
     position: relative;
-    right: -1065px;
+    right: -1600px;
 
 }
+
+h1{
+    text-align: center;
+    color: #fff1f1;
+}
+p{
+    text-align:justify;
+    color: #0a0a0a;
+}
+
+h2{ 
+    text-align: center;
+    padding: 30rem;
+    color: azure;
+}
+
+
+#imagenescarrusel{
+
+    object-fit: contain;
+
+    height: 400px;
+    width: 400px;
+    padding: 1em;
+
+    border-radius: 30px;
+
+
+}
+
+
+ /* .carousel-inner{
+    object-fit: contain;
+    height:600px;
+    width:600px;
+
+
+   } */
+
+
+
 
 body{
     background-color: rgb(87, 87, 87);
 }
+
+
+/** Contact**/
+
+.form {
+    background-color: #757575;
+    width: min(60rem, 100%); /** Utilizar el valor mas pequeño**/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.form fieldset{
+    border: none;
+}
+
+.form legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    color: #ffc107;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .container-camp {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .camp:nth-child(3),
+    .camp:nth-child(4) {
+    grid-column: 1 / 3;
+    }
+}
+
+.camp {
+    margin-bottom: 1rem;
+}
+
+.camp label {
+    color: rgb(126, 116, 116);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.camp textarea {
+    height: 17rem;
+    resize: none;
+}
+
+.input-text {
+    width: 97%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+.footer {
+    text-align: center;
+}
+
+.link {
+    text-decoration: none;
+    color: rgb(199, 191, 191);
+}
+
+.service img {
+    border-radius: .5rem;
+}
+
