--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -28,13 +28,37 @@ h2{
 
 
 
-
+#carrusel{
+    width: 
+    25rem;
+    margin: auto; 
+    margin: 0; 
+    position: 
+    absolute; 
+    top: 50%; 
+    left: 50%; 
+    -ms-transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
+}
 
 #imagenfooter{
             object-fit: contain;
     width: 50px;
     height: 50px;   
 }
+
+
+#navbar{
+    height: 4rem; width: 120rem; border-radius: 3px;
+}
+
+#btnlogin{
+    color: rgb(255, 253, 253); background-color: rgb(43, 43, 43); border-radius: 2px;
+    margin: 5px;
+}
+
+
+
 
 
 #imagenredes{
@@ -89,7 +113,7 @@ h2{
     width: 300px;
     padding: 1em;
 
-    border-radius: 50px;
+    border-radius: 15px;
 
 
 }
@@ -203,5 +227,6 @@ body{
     left: 0;
     bottom: 0;
     width: 100%;
+    height: 10%;
 }
 
