--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -109,12 +109,12 @@ h2{
 #imagenescarrusel{
 
 
-    height: 300px;
+    height: 350px;
     width: 300px;
     padding: 1em;
-
-    border-radius: 15px;
-
+    margin: 1px;
+    border-radius: 20px;
+   
 
 }
 
@@ -183,7 +183,7 @@ body{
     .camp:nth-child(4) {
     grid-column: 1 / 3;
     }
-}
+} 
 
 .camp {
     margin-bottom: 1rem;
